crates/talon-cli/tests/snapshots/human_output__snapshot_search_empty.snap
---
source: crates/talon-cli/tests/human_output.rs
expression: "String::from_utf8(buf).unwrap()"
---
Search  "orchard"  ·  hybrid  ·  0 results

  No results found.
