crates/talon-cli/tests/snapshots/human_output__snapshot_search_results.snap
---
source: crates/talon-cli/tests/human_output.rs
assertion_line: 109
expression: "String::from_utf8(buf)?"
---
Search  "galaxy brain"  ·  hybrid  ·  expanded  ·  reranked  ·  2 results
  expanded: galaxy brain notes  ·  neural pathway atlas

  1  [[Atlas/Overview.md|Atlas Overview]]
     fulltext  ·  0.847
     This is a snippet about galaxy brains and neural pathways that may wrap.

  2  [[Graph/Hub.md|Hub]]  ·  research
     semantic  ·  0.723
     Semantic match snippet here.
