crates/talon-cli/tests/snapshots/human_output__snapshot_search_verbose_diagnostics.snap
---
source: crates/talon-cli/tests/human_output.rs
assertion_line: 151
expression: "String::from_utf8(buf)?"
---
Search  "galaxy brain"  ·  hybrid  ·  expanded  ·  reranked  ·  1 result
  expanded: galaxy brain notes
  stages: expansion 142ms  ·  rerank 30c 88ms

  1  Atlas Overview
     Atlas/Overview.md
     fulltext  ·  0.500
     snippet

