crates/talon-cli/tests/snapshots/human_output__snapshot_status_ready.snap
---
source: crates/talon-cli/tests/human_output.rs
expression: "String::from_utf8(buf).unwrap()"
---
Status: Ready
  Notes: 21  Chunks: 63  Failed: 0
  Dimensions: 384
