crates/talon-cli/tests/snapshots/human_output__snapshot_sync_fast.snap
---
source: crates/talon-cli/tests/human_output.rs
expression: "String::from_utf8(buf).unwrap()"
---
Sync: OK (5 indexed/updated, 16 skipped, 0 deleted) in 42ms
